Add city to selection

--- a/app/templates/app/user/register_company.html
+++ b/app/templates/app/user/register_company.html
@@ -77,10 +77,75 @@
                             </div>
 
                             <div class="d-flex flex-row align-items-center mb-4">
-                                <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                              <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                               <div class="form-outline flex-fill mb-0">
-                                <label for="inputCity" class="form-label">City</label>
-                                <input class="form-control" type="text"  id="inputCity" placeholder="ABC City" name="city">
+                                  <label for="inputCity" class="form-label">City</label>
+                                  <select id="inputGender" class="form-select" name="city">
+                                  <option selected>Choose your City</option>
+                                  <option>An Giang</option>
+                                  <option>Ba Ria-Vung Tau</option>
+                                  <option>Bac Lieu</option>
+                                  <option>Bac Kan</option>
+                                  <option>Bac Giang</option>
+                                  <option>Bac Ninh</option>
+                                  <option>Ben Tre</option>
+                                  <option>Binh Duong</option>
+                                  <option>Binh Dinh</option>
+                                  <option>Binh Phuoc</option>
+                                  <option>Binh Thuan</option>
+                                  <option>Ca Mau</option>
+                                  <option>Cao Bang</option>
+                                  <option>Can Tho</option>
+                                  <option>Da Nang</option>
+                                  <option>Dak Lak</option>
+                                  <option>Dak Nong</option>
+                                  <option>Dien Bien</option>
+                                  <option>Dong Nai</option>
+                                  <option>Dong Thap</option>
+                                  <option>Gia Lai</option>
+                                  <option>Ha Giang</option>
+                                  <option>Ha Nam</option>
+                                  <option>Ha Noi</option>
+                                  <option>Ha Tinh</option>
+                                  <option>Hai Duong</option>
+                                  <option>Hai Phong</option>
+                                  <option>Hoa Binh</option>
+                                  <option>Ho Chi Minh City</option>
+                                  <option>Hau Giang</option>
+                                  <option>Hung Yen</option>
+                                  <option>Khanh Hoa</option>
+                                  <option>Kien Giang</option>
+                                  <option>Kon Tum</option>
+                                  <option>Lai Chau</option>
+                                  <option>Lao Cai</option>
+                                  <option>Lang Sơn</option>
+                                  <option>Lam Dong</option>
+                                  <option>Long An</option>
+                                  <option>Nam Dinh</option>
+                                  <option>Nghe An</option>
+                                  <option>Ninh Binh</option>
+                                  <option>Ninh Thuan</option>
+                                  <option>Phu Tho</option>
+                                  <option>Phu Yen</option>
+                                  <option>Quang Binh</option>
+                                  <option>Quang Nam</option>
+                                  <option>Quang Ngai</option>
+                                  <option>Quang Ninh</option>
+                                  <option>Quang Tri</option>
+                                  <option>Soc Trang</option>
+                                  <option>Son La</option>
+                                  <option>Tay Ninh</option>
+                                  <option>Thai Binh</option>
+                                  <option>Thai Nguyen</option>
+                                  <option>Thanh Hoa</option>
+                                  <option>Thua Thien-Hue</option>
+                                  <option>Tien Giang</option>
+                                  <option>Tra Vinh</option>
+                                  <option>Tuyen Quang</option>
+                                  <option>Vinh Long</option>
+                                  <option>Vinh Phuc</option>
+                                  <option>Yen Bai</option>
+                                  </select>
                               </div>
                             </div>
 
