--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -1,9 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -24,11 +21,12 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+  
         <!--Header-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'app/image/logo.jpg' %}" height ="80" width ="80" />
+              <a class="navbar-brand mx-auto" href="{% url 'home' %}">
+                <img src="{% static 'app/image/OJFAlogo.png' %}" height ="75" width ="75">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
