--- a/app/templates/app/post/apply.html
+++ b/app/templates/app/post/apply.html
@@ -19,69 +19,89 @@
                 <img class="d-block mx-auto mb-4" src="{% static 'app/image/apply_icon.png' %}" alt="" width="200" height="200">
                 <h2>CV FORM</h2>
             </div>
+
+            <div class="text-left fw-bold">
+              {% if messages %}
+                  {% for message in messages %}
+                      <div>{{ message }}</div>
+                  {% endfor %}
+              {% endif %}
+            </div>
+
             <div class = "row g-5">
               <h4 class="mb-0">Basic</h4>
-                <form class="needs-validation" novalidate="">
+                <form class="needs-validation" novalidate="" method="POST" action="">
+                  {% csrf_token %} 
                     <div class="row g-3">
                       <div class="col-sm-5">
-                        <label for="firstName" class="form-label">First name :  </label>
+                        <label for="firstName" class="form-label">Full name :  </label>
+                        {{ job_finder.full_name }}
                       </div>
           
-                      <div class="col-sm-4">
+                      {% comment %} <div class="col-sm-4">
                         <label for="lastName" class="form-label">Last name : </label>
-                      </div>
+                      </div> {% endcomment %}
                       
                       <div class="col-sm-3">
                         <label for="lastName" class="form-label">Gender : </label>
+                        {{ job_finder.gender }}
                       </div>
 
                       <div class="col-sm-9">
                         <label for="address" class="form-label">Address : </label>
+                        {{ job_finder.address }}
                       </div>
 
                       <div class="col-sm-3">
                         <label for="lastName" class="form-label">DOB : </label>
+                        {{ job_finder.date_of_birth }}
                       </div>
                       
                       <div class=" col-sm-6 d-flex flex-row align-items-center">
                         <div class="form-outline flex-fill mb-0">
                             <label for="">Experience</label>
-                            <textarea class="form-control" placeholder="Briefly write about your experience" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                            {% comment %} <textarea class="form-control" placeholder="Briefly write about your experience" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                                {% endcomment %}
+                            {{ form.experience }}
                         </div>
                       </div>
 
                       <div class=" col-sm-6 d-flex flex-row align-items-center">
                         <div class="form-outline flex-fill mb-0">
                             <label for="">Short introduction</label>
-                            <textarea class="form-control" placeholder="Briefly introduce yourself" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                            {% comment %} <textarea class="form-control" placeholder="Briefly introduce yourself" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                                {% endcomment %}
+                            {{ form.introduction }}
                         </div>
                       </div>
 
                       <div class=" col-sm-6 d-flex flex-row align-items-center">
                         <div class="form-outline flex-fill mb-0">
                             <label for="">Education</label>
-                            <textarea class="form-control" placeholder="Briefly write about your education" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                            {% comment %} <textarea class="form-control" placeholder="Briefly write about your education" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                                {% endcomment %}
+                            {{ form.education }}
                         </div>
                       </div>
 
                       <div class=" col-sm-6 d-flex flex-row align-items-center">
                         <div class="form-outline flex-fill mb-0">
                             <label for="">Interests</label>
-                            <textarea class="form-control" placeholder="Briefly write about your interests" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                            {% comment %} <textarea class="form-control" placeholder="Briefly write about your interests" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                                {% endcomment %}
+                            {{ form.interest }}
                         </div>
                       </div>
 
                       <div class=" col-sm-6 d-flex flex-row align-items-center">
                         <div class="form-outline flex-fill mb-0">
                             <label for="">Foreign Languages</label>
-                            <textarea class="form-control" placeholder="Briefly write about your foreign languages" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                            {% comment %} <textarea class="form-control" placeholder="Briefly write about your foreign languages" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                                {% endcomment %}
+                            {{ form.languages }}
                         </div>
                       </div>
 
                       <div class=" col-sm-6 d-flex flex-row align-items-center">
                         <div class="form-outline flex-fill mb-0">
                             <label for="">Skills and Certification</label>
-                            <textarea class="form-control" placeholder="Briefly write about your skills and certifications" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                               
+                            {% comment %} <textarea class="form-control" placeholder="Briefly write about your skills and certifications" id="floatingTextarea2" style="height: 100px" name="intro" ></textarea>                                {% endcomment %}
+                            {{ form.skill }}
                         </div>
                       </div>                                                     
                     </div>
@@ -92,7 +112,8 @@
                     <div class="row g-3">
                       <div class="col-sm-4">
                         <label for="email" class="form-label">Email <span class="text-body-secondary">(Optional)</span></label>
-                        <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                        {% comment %} <input type="email" class="form-control" id="email" placeholder="you@example.com"> {% endcomment %}
+                        {{ form.mail }}
                         <div class="invalid-feedback">
                           Please enter a valid email address for further contact.
                         </div>
@@ -100,16 +121,19 @@
 
                       <div class="col-sm-3">
                         <label for="number" class="form-label">Phone number <span class="text-body-secondary">(Optional)</span></label>
-                        <input type="number" class="form-control" id="phone-number" placeholder="0123456789">
+                        {% comment %} <input type="number" class="form-control" id="phone-number" placeholder="0123456789"> {% endcomment %}
+                        {{ form.phone }}
                       </div>
                     </div>
 
                     <hr class="my-4">
                     <div class="d-grid gap-2 d-md-flex col-6 mx-auto">
                       <a type="button" class="btn btn-secondary btn-lg col-sm-6" href="{% url 'home' %}">Return to home</a>
-                      <a type="submit" class="btn btn-primary btn-lg col-sm-6" href="#">Send Application</a>
+                      <button type="submit" class="btn btn-primary btn-lg col-sm-6" >Send Application</button>
                     </div>
+                      
                   </form>
+                  
             </div>
         </main>
     </div>
