--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -182,7 +182,7 @@
     <!-- Hide and Delete post-->
     {% if is_owner %}
         <hr class="my-4">
-        <div class="d-grid gap-2 d-md-flex col-6 mx-auto">
+        <div class="d-grid gap-2 d-md-flex col-6 mt-5">
             {% if not post.is_hidden %}
                 <form method="POST" action="{% url 'post' post.id %}">
                     {% csrf_token %}
@@ -226,52 +226,70 @@
             </form>
         </div>
     </div>
-    <div class="col-md-8 col-sm-12 text-center">
-    <!-- Comment section -->
-    <h1>Comments:</h1>
-    </div>
-    <!-- Comment form -->
-    <form method="POST" action="{% url 'post' post.id %}">
-        {% csrf_token %}
 
-        <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-        <div class="form-outline flex-fill ">
-            <p><strong>{{ comment.user.username }}</strong>
-        <label for="floatingTextarea2"></label>
-        <textarea name="comment_content" class=col-md-3 style="height: 35px" placeholder="Write a comment"></textarea>
-        <button type="submit" name="action" value="comment" >Post Comment</button>                               
-    </form>
-    
-    
-    {% for comment in comments %}
-        <div class="card mt-4">
-            <div class="comment">
-                <p>
-                    <strong><a href="{% url 'profile' username=comment.user.username %}">{{ comment.user.username }}</a></strong>
-                    - {{ comment.created_at|timesince }} ago
-                </p>
-                <p>{{ comment.content }}</p>
-                <div class="d-flex">
-                    <form method="POST" action="{% url 'post' post.id %}">
-                        {% csrf_token %}
-                        <input type="hidden" name="action" value="like_comment">
-                        <input type="hidden" name="comment_id" value="{{ comment.id }}">
-                        <button type="submit" class="btn btn-primary btn-sm me-2">
-                            <i class="bi bi-hand-thumbs-up-fill "></i>({% if comment.likes.count %}{{ comment.likes.count }}{% else %}0{% endif %})
-                        </button>
-                    </form>
-                    <form method="POST" action="{% url 'post' post.id %}">
-                        {% csrf_token %}
-                        <input type="hidden" name="action" value="dislike_comment">
-                        <input type="hidden" name="comment_id" value="{{ comment.id }}">
-                        <button type="submit" class="btn btn-danger btn-sm me-2">
-                            <i class="bi bi-hand-thumbs-down-fill "></i> ({% if comment.dislikes.count %}{{ comment.dislikes.count }}{% else %}0{% endif %})
-                        </button>
-                    </form>
+   <div class="container">
+        <div class="row d-flex justify-content-center align-items-center">
+            <!-- Comment section -->
+            <h1>Comments:</h1>
+        </div>
+        <!-- Comment form -->
+        <div class="row d-flex justify-content-center align-items-center">
+            <form method="POST" action="{% url 'post' post.id %}">
+                {% csrf_token %}
+                <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                <div class="form-outline flex-fill">
+                    <p><strong>{{ comment.user.username }}</strong></p>
+                    <label for="floatingTextarea2"></label>
+                    <textarea name="comment_content" class="col-md-3 form-control" style="height: 35px" placeholder="Write a comment"></textarea>
+                    <button type="submit" name="action" value="comment" class="btn btn-primary">Post Comment</button>
+                </div>
+            </form>
+        </div>
+
+        {% for comment in comments %}
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="container h-100">
+                <div class="comment">
+                    <p>
+                        <strong><a href="{% url 'profile' username=comment.user.username %}">{{ comment.user.username }}</a></strong>
+                        - {{ comment.created_at|timesince }} ago
+                    </p>
+                    <p>{{ comment.content }}</p>
+                    <div class="d-flex">
+                        <form method="POST" action="{% url 'post' post.id %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="action" value="like_comment">
+                            <input type="hidden" name="comment_id" value="{{ comment.id }}">
+                            {% if liked_comments %}
+                            <button type="submit" class="btn btn-primary btn-sm me-2">
+                            <i class="bi bi-hand-thumbs-up-fill"></i>
+                            {% else %}
+                            <button type="submit" class="btn btn-secondary btn-sm me-2">
+                            <i class="bi bi-hand-thumbs-up"></i>
+                            {% endif %}
+                            ({% if comment.likes.count %}{{ comment.likes.count }}{% else %}0{% endif %})
+                            </button>
+                        </form>
+                        <form method="POST" action="{% url 'post' post.id %}">
+                            {% csrf_token %}
+                            <input type="hidden" name="action" value="dislike_comment">
+                            <input type="hidden" name="comment_id" value="{{ comment.id }}">
+                             {% if disliked_comments%}
+                            <button type="submit" class="btn btn-danger btn-sm me-2">
+                            <i class="bi bi-hand-thumbs-down-fill"></i>
+                             {% else %}
+                            <button type="submit" class="btn btn-secondary btn-sm me-2">
+                            <i class="bi bi-hand-thumbs-down"></i>
+                            {% endif %}
+                                 ({% if comment.dislikes.count %}{{ comment.dislikes.count }}{% else %}0{% endif %})
+                            </button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 
 </section>
 
