--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -245,8 +245,8 @@
                 <div class="form-outline flex-fill">
                     <p><strong>{{ comment.user.username }}</strong></p>
                     <label for="floatingTextarea2"></label>
-                    <textarea name="comment_content" class="col-md-3 form-control" style="height: 35px" placeholder="Write a comment"></textarea>
-                    <button type="submit" name="action" value="comment" class="btn btn-primary">Post Comment</button>
+                    <textarea name="comment_content" class="col-md-3 form-control" style="height:120px" placeholder="Write a comment"></textarea>
+                    <button type="submit" name="action" value="comment" class="btn btn-primary mt-4">Post Comment</button>
                 </div>
             </form>
         </div>
