--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -174,6 +174,7 @@
                         
                         
                     </div>
+    <button type="submit" name="action" value="comment" class="btn btn-danger mx-auto" style="width: 130px; height: 60px; font-size:20px">Report post</button>
                 </div>
             </div>
         </div>
@@ -281,6 +282,7 @@
                                 {{ comment.dislikes.count }}
                             </button>
                         </form>
+                        <button type="submit" name="action" value="comment" class="btn btn-danger btn-sm" style="margin-left: 50px;">Report comment</button>
             </div>
         </div>
     </div>
