Update publish.html (Approve, Deny placeholder)

--- a/app/templates/app/post/publish.html
+++ b/app/templates/app/post/publish.html
@@ -88,7 +88,7 @@
                                                 {{ form.job }}
                                             </div>
                                         </div>
-
+      
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
@@ -110,6 +110,22 @@
                                             <div class="form-outline flex-fill mb-0">
                                                 <label for="inputSalary" class="form-label">Salary</label>
                                                 {{ form.salary }}
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <label for="inputAprove" class="form-label">Approve message</label>
+                                                <textarea class="form-control" placeholder="Message when approve applicants" id="inputDescription" style="height: 100px" name="approve"></textarea>
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <label for="inputDeny" class="form-label">Deny message</label>
+                                                <textarea class="form-control" placeholder="Message when deny applicants" id="inputDescription" style="height: 100px" name="deny"></textarea>
                                             </div>
                                         </div>
 
