--- a/app/templates/app/post/publish.html
+++ b/app/templates/app/post/publish.html
@@ -29,7 +29,7 @@
                     <div class="card text-black" style="border-radius: 25px;">
                         <div class="card-body p-md-5">
                             <div class="row justify-content-center">
-                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+                               
                                     <div class="text-center fw-bold">
                                         {% if messages %}
                                             {% for message in messages %}
@@ -43,9 +43,8 @@
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
-                                                <label class="form-label">For best quality and performance, please upload 400px x 400px image</label>
-                                                <label for="inputPicURL" class="form-label">Picture :</label>
-                                                {{ form.pic_url }}
+                                                <label for="inputPicURL" class="form-label">Picture : (For best quality and performance, please upload 400px x 400px image) : </label>
+                                                <br>{{ form.pic_url }}</br>
                                             </div>
                                         </div>
 
@@ -75,10 +74,7 @@
                                         
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <label for="inputJob" class="form-label">Field</label>
-                                                {{ form.field }}
-                                            </div>
+                                            
                                         </div>
 
                                         <div class="d-flex flex-row align-items-center mb-4">
@@ -107,9 +103,13 @@
 
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
+                                            <div class="form-outline mb-0">
                                                 <label for="inputSalary" class="form-label">Salary</label>
                                                 {{ form.salary }}
+                                            </div>
+                                            <div class="form-outline mx-5 mb-0">
+                                                <label for="inputJob" class="form-label">Field</label>
+                                                {{ form.field }}
                                             </div>
                                         </div>
 
@@ -133,7 +133,7 @@
                                             <button type="submit" class="btn btn-primary btn-lg">POST</button>
                                         </div>
                                     </form>
-                                </div>
+                               
                             </div>
                         </div>
                     </div>
