--- a/app/templates/app/settings.html
+++ b/app/templates/app/settings.html
@@ -97,7 +97,7 @@
                               </div>
                               {% csrf_token %}
                                 <label for="inputConfirmNewPassword" class="form-label">Type your password to delete the account.</label>
-                                <input type="password" class="form-control" id="inputPassword" placeholder = "Type your password" name ="dpass">
+                                <input type="password" class="form-control" id="inputPassword" placeholder = "Type your password" name ="dpass"></input>
                               <button type="submit" class="btn btn-danger" name = "Security" value = "DeleteAccount">I want to Delete</button>
                             </form>
                           </div>
