--- a/app/templates/app/user/profileE.html
+++ b/app/templates/app/user/profileE.html
@@ -82,7 +82,29 @@
                         </div>
                         <div class="form-group">
                           <button class="btn btn-outline-info" type="submit">Update</button>
+                          <button type="button" class="btn btn-danger mx-5" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Report</button>
                         </div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Briefly explain why you report this user</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                              </div>
+                              <div class="modal-body">                            
+                                <textarea type="text" class="form-control mt-3" placeholder = "Type here" id="floatingTextarea2">
+                                </textarea>
+                              </div>
+                              <div class="modal-footer">     
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-danger">Report</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>  
+
                         {%else%}
                         <div class="form-group">
                           <label for="company-name">Company Name</label>
@@ -100,6 +122,9 @@
                           <label for="introduction">Introduction</label>
                           <textarea id="introduction" name="introduction" rows="5" required readonly>{{ em.introduction }}</textarea>
                         </div>
+
+                        
+
                         {%endif%}
                       </fieldset>
                     </form>
