--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -15,6 +15,8 @@
         
         <!--Web title-->
         <title>O.J.F.A</title>
+        <link rel="icon" href="{% static 'app/image/favicon.png' %}" sizes="32x32" type="image/png">
+
 
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
