--- a/app/templates/app/user/profileE.html
+++ b/app/templates/app/user/profileE.html
@@ -82,7 +82,7 @@
                         </div>
                         <div class="form-group">
                           <button class="btn btn-outline-info" type="submit">Update</button>
-                          <button type="button" class="btn btn-danger mx-5" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Report</button>
+                          <button type="button" class="btn btn-danger float-end" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Report</button>
                         </div>
 
                         <!-- Modal -->
