Add Settings title

--- a/app/templates/app/settings.html
+++ b/app/templates/app/settings.html
@@ -13,6 +13,13 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+      <div class="container">
+        <div class="row justify-content-center mt-5 mb-4 border-bottom">
+            <div class="col-md-10 col-sm-12 text-center">
+                <h1 class="display-10">SETTINGS</h1>
+            </div>
+        </div>
+      </div>
         <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
               <h2 class="accordion-header">
