--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -16,8 +16,17 @@
     </head>
     <body>
         <!--Search header-->
-        <h5 class=" mx-5 mt-5">Searched for "{{ searched }}". Found {{count}} results :</h5>
-    <form action ="" >
+        <h5 class="mx-5 mt-5">
+          {% if searched %}
+              Searched for "{{ searched }}"
+          {% else %}
+              Searched for "{{ searched_cate }}"
+          {% endif %}
+          . Found {{ count }} results:
+      </h5>
+      
+
+      <form action ="" >
       <div class="text-center fw-bold">
             {% if messages %}
               {% for message in messages %}
@@ -25,6 +34,7 @@
               {% endfor %}
             {% endif %}
           </div>
+        <input type="hidden" name="category" value="{{category}}">
         <input type="hidden" name="searched" value="{{ searched }}">
         <input type="hidden" name="page" value="{{ posts.number }}">
         <div class="container mb-5" >
