--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -1,7 +1,22 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block main-content %}
-
+<!-- Message display code -->
+{% if messages %}
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-md-12">
+      {% for message in messages %}
+      {% if message.extra_tags == 'report_post' %}
+            <div class="alert alert-danger" role="alert">
+                  {{ message }}
+            </div>
+      {% endif %}
+      {% endfor %}
+    </div>
+  </div>
+</div>
+{% endif %}
 <html>
 <head>
     <meta charset="utf-8">
@@ -175,13 +190,14 @@
                         
                         
                     </div>
-
+                    {% if not is_owner%}
                     <div class="container text-center mb-5">
                         <button type="button" class="btn btn-danger mx-auto" style="height: 60px;font-size:20px"data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                           Report Post
                         </button>
                     </div>
                       <!-- Modal -->
+                    <form class ="row g-3 align-items-center" action = "" method = 'POST'>
                     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
@@ -190,16 +206,20 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">                            
-                                    <textarea type="text" class="form-control mt-3 mb-2" placeholder = "Type here" id="floatingTextarea2">
+                                    <textarea type="text" class="form-control mt-3 mb-2" placeholder = "Type here" id="floatingTextarea2" name='rp_content'>
                                     </textarea>
                                 </div>
-                                <div class="modal-footer">     
+
+                                <div class="modal-footer">  
+                                    {% csrf_token %}     
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-danger">Report</button>
+                                        <button type="submit" class="btn btn-danger" name='action' value='report'>Report</button>
                                 </div>
                             </div>
                         </div>
-                    </div>  
+                    </div>
+                </form> 
+                    {%endif%} 
                 </div>
             </div>
         </div>
