edit post function need UI
post owners can edit their posts, other user cant, if they type URL will be redirect home with error message

--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -250,6 +250,7 @@
                     <input type="hidden" name="action" value="delete">
                     <button type="submit" class="btn btn-danger btn-lg col-sm-25">Delete Post</button>
                 </form>
+                <a href="{% url 'edit_post' pk=post.id %}" class="btn btn-primary btn-lg col-sm-25">Edit Post</a>
             </div>
         </div>
     </div>
