--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -2,7 +2,18 @@
 {% load static %}
 
 {% block main-content %}
-
+{% if not_owner_message %}
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{ not_owner_message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    </div>
+  </div>
+</div>
+{% endif %}
 <!DOCTYPE html>
 
 <html>
