--- a/app/templates/app/post/history.html
+++ b/app/templates/app/post/history.html
@@ -13,49 +13,35 @@
         <div class="col-lg-8 col-xl-8">
             <div class="table-responsive small">    
                 <table class="table table-striped table-sm">
-
-                    <thead> <!--Dòng này là cái header-->
-                        <tr>
-                            <th scope="col">No</th>
-                            <th scope="col">Company name</th>
-                            <th scope="col">Job</th>
-                            <th scope="col">Applied time</th>
-                            <th scope="col" class="text-center">Status</th>
-                            <th scope="col"></th>
-                        
-                        </tr>
-                    </thead>
-
-                    <tbody class="table-group-divider"> <!--Nội dung của từng cột-->
-                        <tr>
-                            <td>1</td>
-                            <td>Company name 1</td>
-                            <td>Computer Engineer</td>
-                            <td>Date 1</td>
-                            <td class = "text-center fw-bold">PENDING</td>
-                            <td><button type="submit" class="mx-5 btn btn-secondary btn-sm col-sm-25">Cancel</button></td>
-                        
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Company name 2</td>
-                            <td>Pilot</td>
-                            <td>Date 2</td>
-                            <td class = "table-danger text-center text-danger fw-bold">DENIED</td>
-                            <td><button type="submit" class="mx-5 btn btn-secondary btn-sm col-sm-25">Cancel</button></td>
-                        
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Company name 3</td>
-                            <td>Teacher</td>
-                            <td>Date 3</td>
-                            <td class = "table-success text-center text-success fw-bold">ACCEPTED</td>
-                            <td><button type="submit" class="mx-5 btn btn-secondary btn-sm col-sm-25">Cancel</button></td>
-                        
-                        </tr>
-                        
-                    </tbody>
+                    {% if application_history %}
+                        <thead> <!--Dòng này là cái header-->
+                            <tr>
+                                <th scope="col">No</th>
+                                <th scope="col">Company name</th>
+                                <th scope="col">Job</th>
+                                <th scope="col">Applied time</th>
+                                <th scope="col" class="text-center">Status</th>
+                                <th scope="col"></th>
+                            
+                            </tr>
+                        </thead>
+                        <tbody class="table-group-divider"> <!--Nội dung của từng cột-->
+                            {% for application in application_history %}
+                            <tr>
+                                <td>{{ forloop.counter }}</td>
+                                <td>{{ application.company_name }}</td>
+                                <td>{{ application.job_applied }}</td>
+                                <td>{{ application.applied_time }}</td>
+                                <td class="{% if application.status == 'PENDING' %}text-center fw-bold{% elif application.status == 'ACCEPTED' %}table-success text-center text-success fw-bold{% else %}table-danger text-center text-danger fw-bold{% endif %}">
+                                    {{ application.status }}
+                                </td>
+                                <td><button type="submit" class="mx-5 btn btn-secondary btn-sm col-sm-25">Cancel</button></td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    {% else %}
+                        <p class="text-center fw-bold "><h3>No application history found.</h3></p>
+                    {% endif %}
                 </table>
             </div>
         </div>
